Updated documentation and change name from itertools to itertool

--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 itertool.js
 ===========
 
-itertool.js is a JavaScript library containing functions for iteration. 
+itertool.js is a JavaScript library containing generator functions. 
 
 Based on [Python's itertools](http://docs.python.org/library/itertools.html).
 
-The iterator model is loosely based on [Mozilla's JavaScript Iterators and Generators](https://developer.mozilla.org/en/Core_JavaScript_1.5_Guide/Iterators_and_Generators).
+The iterator is modelled on [Mozilla's JavaScript Iterators and Generators](https://developer.mozilla.org/en/Core_JavaScript_1.5_Guide/Iterators_and_Generators).
+
 
 
