--- a/TODO
+++ b/TODO
@@ -1,4 +1,14 @@
 TODO
 ====
 
+v0.0.*
+ - create iterator builders (string, array and object)
+ - add infinite and terminating functions 
+
+v0.1.*
+ - add combinatoric functions
+ - change Iterator to BaseIterator
+ - create api to create user defined Iterator built on BaseIterator
  
+v0.2.*
+ - create extended generator functions built on top of the base generator functions (v0.0.* and v0.1.*) 
